--- a/translations/the_fractured_kingdoms.tex/ru.po
+++ b/translations/the_fractured_kingdoms.tex/ru.po
@@ -58,6 +58,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{События по раундам}}\n"
+"\n"
 
 #. type: multicols
 #: coops/emerald_island.tex:32 coops/close_to_enemies.tex:33
