--- a/translations/sentinels.tex/ru.po
+++ b/translations/sentinels.tex/ru.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-07-05 01:26+0200\n"
+"POT-Creation-Date: 2025-10-23 21:18+0000\n"
 "PO-Revision-Date: 2025-07-05 01:26+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -24,6 +24,8 @@ msgid ""
 "\\addscenariosection{1}{Cooperative Scenario}{Sentinels}{\\images/"
 "sentinel.png}"
 msgstr ""
+"\\addscenariosection{1}{Кооперативный сценарий}{Стражи}{\\images/"
+"sentinel.png}"
 
 #. type: multicols
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
@@ -59,6 +61,8 @@ msgid ""
 "\\textbf{Author:} silence70011\n"
 "\n"
 msgstr ""
+"\\textbf{Автор:} silence70011\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:9
@@ -67,6 +71,8 @@ msgid ""
 "\\textbf{Source:} \\href{https://discord.com/channels/740870068178649108/1233112440322002964/1233112440322002964}{Archon Studio Discord}\n"
 "\n"
 msgstr ""
+"\\textbf{Источник:} \\href{https://discord.com/channels/740870068178649108/1233112440322002964/1233112440322002964}{Discord Archon Studio}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:14
@@ -78,6 +84,11 @@ msgid ""
 "}\n"
 "\n"
 msgstr ""
+"\\textit{Мир за пределами нашего полон тварей и чудовищ, едва сдерживаемых четырьмя священными Обелисками.\n"
+"  Но сила этих камней убывает, и прорыв неминуем.\n"
+"  Когда это случится, только вы и ваш союзник встанете между ордами и полным опустошением этих земель.\n"
+"}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:16 coops/titans_stronghold.tex:18
@@ -90,6 +101,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Scenario Length}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Длительность сценария}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:18
@@ -98,6 +111,8 @@ msgid ""
 "This Scenario is played over 12 Rounds.\n"
 "\n"
 msgstr ""
+"Этот сценарий длится 12 раундов.\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:20 coops/titans_stronghold.tex:22
@@ -111,6 +126,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Player Setup}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Подготовка игроков}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:22 clash/dragoncurse_castle.tex:23
@@ -119,6 +136,8 @@ msgid ""
 "\\textbf{Player Count:} 2\n"
 "\n"
 msgstr ""
+"\\textbf{Число игроков:} 2\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:24
@@ -127,6 +146,8 @@ msgid ""
 "\\textbf{Starting Resources:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
+"\\textbf{Стартовые ресурсы:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:26 coops/titans_stronghold.tex:28
@@ -137,6 +158,8 @@ msgid ""
 "\\textbf{Starting Income:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
+"\\textbf{Стартовый доход:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:32 clash/the_hunt.tex:29
@@ -149,6 +172,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Стартовые отряды:}\n"
+"\\begin{itemize}\n"
+"  \\item «pack» \\svg{bronze} отрядов с \\textit{наименьшей} стоимостью найма\n"
+"  \\item «few» \\svg{bronze} отрядов с \\textit{наибольшей} стоимостью найма\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:34 campaigns/castle_greek_gift.tex:35
@@ -157,6 +186,8 @@ msgid ""
 "\\textbf{Town Buildings:} \\bronze\\ Dwelling, Citadel\n"
 "\n"
 msgstr ""
+"\\textbf{Городские постройки:} \\bronze\\ Жилища, Цитадель\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:36
@@ -165,6 +196,8 @@ msgid ""
 "\\textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These Tiles should not contain any Obelisks.\n"
 "\n"
 msgstr ""
+"\\textbf{Набор фрагментов карты:} Каждый игрок берёт 1 случайный ближний (IV--V) фрагмент карты и 1 дальний (II--III) фрагмент карты. Эти фрагменты не должны содержать Обелисков.\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:38
@@ -173,6 +206,8 @@ msgid ""
 "\\textbf{Additional Bonus:} Search (2) the Artifact Deck\n"
 "\n"
 msgstr ""
+"\\textbf{Дополнительный бонус:} Поиск (2) в колоде артефактов\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:40 coops/titans_stronghold.tex:42
@@ -182,6 +217,8 @@ msgid ""
 "\\vspace*{\\fill}\\columnbreak\n"
 "\n"
 msgstr ""
+"\\vspace*{\\fill}\\columnbreak\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:42 coops/titans_stronghold.tex:44
@@ -195,6 +232,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Подготовка карты}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:44 campaigns/inferno_devilish_plan.tex:90
@@ -205,6 +244,8 @@ msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
+"Возьмите следующие фрагменты карты и расположите по схеме карты сценария:\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:50
@@ -217,6 +258,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item 2 × Стартовый (I) фрагмент карты\n"
+"  \\item 4 × Дальний  (II--III) фрагмент карты\n"
+"  \\item 4 × Ближний (IV--V) фрагмент карты с полем Обелиска\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:52 coops/titans_stronghold.tex:59
@@ -231,6 +278,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Условия победы}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:54
@@ -239,6 +288,8 @@ msgid ""
 "Defeat all invading armies.\n"
 "\n"
 msgstr ""
+"Уничтожь все вторгшиеся армии.\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:56 coops/titans_stronghold.tex:63
@@ -251,6 +302,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Условия поражения}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:58
@@ -259,6 +312,8 @@ msgid ""
 "An undefeated enemy army remains at the end of Round 12.\n"
 "\n"
 msgstr ""
+"Непобеждённая вражеская армия остаётся на поле к концу 12 раунда.\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:60
@@ -267,6 +322,8 @@ msgid ""
 "One of your Towns is captured, or a Main Hero is defeated in a battle (retreat doesn't count).\n"
 "\n"
 msgstr ""
+"Один из ваших городов захвачен, или основной герой побеждён в битве (отступление не считается).\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:62 coops/titans_stronghold.tex:71
@@ -282,6 +339,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{События по раундам}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:68
@@ -294,6 +353,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Раунд 6:}\n"
+"\\begin{itemize}\n"
+"  \\item Уберите все чёрные кубики с каждой Мельницы, Водяной мельницы, Мистического сада на карте.\n"
+"  \\item Разместите вражескую армию в соответствии с правилами ниже.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:73
@@ -305,6 +370,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Раунды 7 и 8:}\n"
+"\\begin{itemize}\n"
+"  \\item Разместите вражескую армию в соответствии с правилами ниже.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:78
@@ -316,6 +386,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Раунд 9:}\n"
+"\\begin{itemize}\n"
+"  \\item Повторите события раунда 6.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:83
@@ -327,6 +402,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\columnbreak\n"
+"\\textbf{Раунд 10:}\n"
+"\\begin{itemize}\n"
+"  \\item Разместите вражескую армию в соответствии с правилами ниже.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:85 coops/emerald_island.tex:60
@@ -341,6 +422,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Дополнительные правила}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:97
@@ -359,6 +442,18 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item  Игнорируйте жёлтые границы на стартовых фрагментах.\n"
+"  \\item Торговля ресурсами доступна когда активный герой посещает Рынок или на поле рядом с союзным героем.\n"
+"  \\item Герой, победивший вражескую армию, получает 2 \\svg{experience}.\n"
+"    Игрок бросает два кубика сокровищ и выбирает один результат.\n"
+"  \\item Кроме того, игроки не могут:\n"
+"  \\begin{itemize}\n"
+"      \\item Атаковать других героев.\n"
+"      \\item Захватывать шахту или посёлок под флагом противника.\n"
+"  \\end{itemize}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:99
@@ -367,6 +462,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Enemy Spawning\\\\and Movement}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Появление и движение\\\\врагов}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:109
@@ -383,6 +480,16 @@ msgid ""
 "  \\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Вражеские армии появляются на случайном поле с Обелиском (используйте миниатюры героев из фракций, не участвующих в игре).\n"
+"  \\item Определите поле Обелиска, бросив 2 кубика атаки. Применяйте результаты как (К1/К2), перебрасывайте 0:\n"
+"  \\begin{itemize}[leftmargin=15pt]\n"
+"    \\item $+1$/$+1$ = север\n"
+"    \\item $+1$/$-1$ = восток\n"
+"    \\item $-1$/$+1$ = запад\n"
+"    \\item $-1$/$-1$ = юг\n"
+"  \\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:114
@@ -394,6 +501,11 @@ msgid ""
 "  \\item If there is a Hero on the Field where the enemy spawns, a fight starts immediately.\n"
 "\n"
 msgstr ""
+"  \\item Для сбалансированного появления врагов в раундах 7 и 9 бросайте только второй кубик атаки (К2). Для К1 используйте противоположный результату из предыдущего раунда.\n"
+"  Раунды 8 и 10 случайны.\n"
+"  \\item Если фрагмент, где должен появиться враг, ещё не открыт, переверните его и расположите по своему усмотрению.\n"
+"  \\item Если на поле, где появляется враг, находится герой, битва начинается немедленно.\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:121
@@ -407,6 +519,13 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"  \\item У вражеских армий есть 3 \\svg{movement} за раунд.\n"
+"  \\item Вражеские армии двигаются в конце каждого раунда, начиная с раунда появления.\n"
+"  \\item Вражеские армии двигаются по правилам из Книги правил (стр. 33), но вместо захвата уничтожают всё на своём пути.\n"
+"    Размещайте чёрные кубики на каждом поле, через которое они прошли, считая эти поля пустыми с этого момента.\n"
+"  \\item Если движение врага может идти в разных направлениях, игроки решают, куда он направится.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:123
@@ -415,6 +534,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Combat with\\\\Enemy Armies}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Сражения с вражескими\\\\армиями}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:131
@@ -429,6 +550,14 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Сражение с вражескими армиями дольше одного раунда боя не тратит \\svg{movement}.\n"
+"  \\item Во время сражения с вражеской армией герой может отступить, когда должен активироваться любой его отряд.\n"
+"    Отступающий основной герой теряет все оставшиеся ОП и возвращается в выбранный им союзный город или посёлок, сохраняя все оставшиеся отряды.\n"
+"  \\item Отступающие вторичные герои удаляются из игры, но их оставшиеся отряды сохраняются.\n"
+"  \\item Уничтоженные вражеские отряды не возрождаются.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:133
@@ -437,6 +566,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Boss Army}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Армия босса}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:140
@@ -450,18 +581,26 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item  В 10 раунде появляется армия босса. Она отличается от предыдущих армий тем, что подкрепляется из фиксированного пула нейтральных отрядов (пул подкрепления = число в скобках в таблице ниже).\n"
+"  \\item В начале 2 раунда боя и каждого последующего раунда, 2 отряда подкрепляют оставшуюся армию из перемешанного пула подкрепления (до максимум 5 отрядов), чтобы продолжить бой до отступления игрока или уничтожения всех нейтральных отрядов из пула подкрепления. \\textit{Если количество вражеских отрядов в начале раунда равно 1 или меньше, возьмите до 4 отрядов (т.е. после усиления на поле всегда остаётся 4 или 5 вражеских отрядов, если они доступны).}\n"
+"  \\item Разместите усиливающие отряды на вражеской задней линии, начиная слева с самой низкой инициативы (сначала отряды \\svg{unit_ranged}). При необходимости продолжите на следующей линии в том же порядке.\n"
+"  \\item Когда игрок отступает, вражеская армия добирает до 4 отрядов и использует их как стартовые в следующем сражении.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
-#: coops/sentinels.tex:142 coops/close_to_enemies.tex:143
-#: coops/stand_united.tex:87 clash/dragoncurse_castle.tex:85
-#: campaigns/inferno_devilish_plan.tex:224 campaigns/castle_greek_gift.tex:120
-#: campaigns/castle_greek_gift.tex:271 sections/credits.tex:28
-#: sections/random_scenario.tex:304
+#: coops/sentinels.tex:142 coops/stand_united.tex:87
+#: clash/dragoncurse_castle.tex:85 campaigns/inferno_devilish_plan.tex:224
+#: campaigns/castle_greek_gift.tex:120 campaigns/castle_greek_gift.tex:271
+#: sections/credits.tex:28 sections/random_scenario.tex:304
 #, no-wrap
 msgid ""
 "\\columnbreak\n"
 "\n"
 msgstr ""
+"\\columnbreak\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:144 coops/titans_stronghold.tex:110
@@ -474,6 +613,8 @@ msgid ""
 "\\vspace*{\\fill}\n"
 "\n"
 msgstr ""
+"\\vspace*{\\fill}\n"
+"\n"
 
 #. type: tikzpicture
 #: coops/sentinels.tex:151
@@ -483,6 +624,9 @@ msgid ""
 "  \\centering\n"
 "  \\node at (14, 2) {\\includegraphics[width=0.4\\paperwidth]{\\maps/sentinels.png}};"
 msgstr ""
+"[overlay]\n"
+"  \\centering\n"
+"  \\node at (14, 3) {\\includegraphics[width=0.4\\paperwidth]{\\maps/sentinels.png}};"
 
 #. type: Plain text
 #: coops/sentinels.tex:192
@@ -511,11 +655,34 @@ msgid ""
 "\\lightcell[1.4]{\\golden \\azure \\azure \\azure \\footref{azure} "
 "\\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
 msgstr ""
+"\\hommtable[]{20}{ \\centering \\medskip \\textbf{Сила вражеской армии}\\\\ "
+"\\bigskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
+"\\let\\origgolden\\golden \\let\\origazure\\azure \\renewcommand{\\bronze}"
+"{\\origbronze[12]} \\renewcommand{\\silver}{\\origsilver[12]} "
+"\\renewcommand{\\golden}{\\origgolden[12]} \\renewcommand{\\azure}"
+"{\\origazure[12]} \\begin{tabularx}{0.95\\linewidth}{p{0.18\\linewidth}XXXX} "
+"& \\darkcell{Раунды 6 + 7} & \\darkcell{Раунды 8 + 9} & \\darkcell{Раунд "
+"10}\\\\ \\darkcell[1.4]{Лёгкий} & \\lightcell[1.4]{\\bronze \\silver "
+"\\silver \\silver \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver "
+"\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\azure "
+"\\footref{azure} \\linebreak (2\\bronze, 4\\silver, 3\\golden, 1\\azure)}\\"
+"\\ \\darkcell[1.4]{Нормальный} & \\lightcell[1.4]{\\silver \\silver \\silver "
+"\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
+"\\azure} & \\lightcell[1.4]{\\golden \\golden \\golden \\azure "
+"\\footref{azure} \\linebreak (2\\silver, 7\\golden, 1\\azure)}\\\\ "
+"\\darkcell[1.4]{Тяжёлый} & \\lightcell[1.4]{\\silver \\silver \\golden "
+"\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden "
+"\\azure} & \\lightcell[1.4]{\\golden \\golden \\azure \\azure "
+"\\footref{azure} \\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ "
+"\\darkcell[1.4]{Невозможный} & \\lightcell[1.4]{\\silver \\golden \\golden "
+"\\golden \\golden} & \\lightcell[1.4]{\\golden \\golden \\golden \\golden "
+"\\azure} & \\lightcell[1.4]{\\golden \\azure \\azure \\azure "
+"\\footref{azure} \\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
 
 #. type: Plain text
 #: coops/sentinels.tex:196
 msgid "\\stepcounter{footnote}"
-msgstr ""
+msgstr "\\stepcounter{footnote}"
 
 #. type: footnotetext{#2}
 #: coops/sentinels.tex:196
@@ -523,3 +690,5 @@ msgid ""
 "Always 1 Unit of Azure Dragons (starting Units of Boss Army). The rest is "
 "random\\label{azure}."
 msgstr ""
+"Всегда 1 отряд Лазурных драконов (стартовые отряды армии босса). Остальные "
+"случайны\\label{azure}."
