--- a/draft-scenarios/coops/wandering_dragons.tex
+++ b/draft-scenarios/coops/wandering_dragons.tex
@@ -80,7 +80,7 @@ Randomly draw the following Neutral dragon Unit Cards into two \textbf{Dragon De
 
 \begin{itemize}
   \item The WD start at the center of the undiscovered Center Map Tile and are marked with a \svg{morale_negative} token.
-  \item The WD \textbf{do not discover} Map Tiles they move throgh.
+  \item The WD \textbf{do not discover} Map Tiles they move through.
   \item The WD move at the end of every Round. Roll 2 Attack Dice and add 1 to the result. On a result of:
   \begin{itemize}
     \item +1, +2, or +3, the WD move that amount of Fields toward the player asset (Hero, Town, or Settlement) that is closest to it.
