--- a/draft-scenarios/sections/intro_and_toc.tex
+++ b/draft-scenarios/sections/intro_and_toc.tex
@@ -19,9 +19,15 @@
 
   \bigbreak
 
-  \begin{multicols}{2}
+  \begin{multicols}{3}
     \bigbreak
     \centering
+
+    \includegraphics[width=0.8\linewidth]{\qr/form.png} \\
+    Scan to open Scenario \textbf{feedback form}.\\
+    \href{\formurl}{https://docs.google.com/forms/...}
+
+    \columnbreak
     \includegraphics[width=0.8\linewidth]{\qr/discord.png}\\
     Scan to join the Heroes III Board Game community \textbf{Discord} server.\\
     \href{\discordurl}{\discordurl}
